[tool.poetry]
name = "cloudsplaining2securityhub"
version = "0.3.4"
description = "Tool to send Cloudsplaining findings to AWS Security Hub"
authors = ["Jan Ritter <me@janri.de>"]
license = "GPL-3.0 license"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.22.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cloudsplaining2securityhub = 'cloudsplaining2securityhub:__main__'

